--- a/empleados/manejo_empleados/templates/manejo_empleados/detail.html
+++ b/empleados/manejo_empleados/templates/manejo_empleados/detail.html
@@ -60,4 +60,9 @@
     <a href="/admin/manejo_empleados/estudio/add/"><input type="button" value="Crear nuevo estudio"></a>
     &nbsp;&nbsp;&nbsp;&nbsp;
     <a href="/admin/manejo_empleados/experiencia/add/"><input type="button" value="Crear nueva experiencia laboral"></a>
+    <br>
+    <br>
+    <br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="/"><input type="button" value="Regresar"></a>
 </ul>
